--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8080
-blog.title=Blog
-blog.banner.title=Warning
-blog.banner.content=The blog will be down tomorrow.
+imagegallery.title=imagegallery
+imagegallery.banner.title=Warning
+imagegallery.banner.content=The blog will be down tomorrow.
