Added more tags Pagination Prototype

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ server.port=8080
 imagegallery.title=imagegallery
 imagegallery.banner.title=Warning
 imagegallery.banner.content=The blog will be down tomorrow.
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
