--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
 server.port=5000
-imagegallery.title=imagegallery
-imagegallery.banner.title=Warning
-imagegallery.banner.content=The blog will be down tomorrow.
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -9,3 +6,12 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+
+cloud.aws.region.static=eu-central-1
+cloud.aws.stack.auto=false
+
+logging.level.com.amazonaws.util.EC2MetadataUtils= error
+logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=error
+
+aws_access_key_id = AKIA4KVEKI7PBO4XCXH2
+aws_secret_access_key = 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
